--- a/React/My_Project/mdms/package.json
+++ b/React/My_Project/mdms/package.json
@@ -13,11 +13,14 @@
     "i18next": "^25.6.0",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.545.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-i18next": "^16.0.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.2.1"
   },
